Colaboratory kullanılarak oluşturuldu

--- a/FoktöriyelPermütasyonKarsilasma.ipynb
+++ b/FoktöriyelPermütasyonKarsilasma.ipynb
@@ -6,6 +6,7 @@
       "name": "FoktöriyelPermütasyonKarsilasma.ipynb",
       "provenance": [],
       "collapsed_sections": [],
+      "authorship_tag": "ABX9TyPM9HkJpGa7s+LYJ7ecCuzr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,21 +29,18 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "xrugHtlt7uf8",
-        "colab_type": "code",
-        "colab": {}
+        "id": "xrugHtlt7uf8"
       },
       "source": [
         ""
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "nH_eh2BfqeY8",
-        "colab_type": "text"
+        "id": "nH_eh2BfqeY8"
       },
       "source": [
         "**SORU**: Umuttepe yerleşkesinde gezerken karşılaştığımız kişinin arkadaşımız olma olasılığı?\n",
@@ -67,7 +65,7 @@
         "\n",
         "**AÇIKLAMA**\n",
         "\n",
-        "60 kişinin bulunduğu bir yerde karşılaştığımız kişinin arkadaşımız olma durumunu hesaplarken, örnek uzayımız 60 kişisen 10 kişinin seçimi olacaktır.\n",
+        "60000 kişinin bulunduğu bir yerde karşılaştığımız kişinin arkadaşımız olma durumunu hesaplarken, örnek uzayımız 60 kişisen 10 kişinin seçimi olacaktır.\n",
         "\n",
         "İstenen durum karşılaştığımız kişinin arkadaşımız olma olasılığıdır. Burada bazen 1 arkadaş bazen 2, bazen daha farklı sayıda arkadaşımız ile karşılaşabiliriz. Bu şekilde çok fazla ihtimal olduğu için tüm durumdan (1), istenmeyen durumu (hiç arkadaşımla karşılaşmama) çıkararak olay uzayımı oluşturabilirim.\n",
         "\n",
@@ -80,7 +78,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "A_k_pbiUvoEx",
-        "colab_type": "code",
         "outputId": "67df78c6-3902-4e71-d64d-5e62d9ab387f",
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -98,13 +95,13 @@
         "\n",
         "olayuzay= float(faktoriyel(55)/(faktoriyel(45)*faktoriyel(10))) #Olay Uzay; istenmeyen durum, hiç arkadaşla karşılaşmama durumu.\n",
         "print(\"olayuzay = \" + str(olayuzay))\n",
-        "ornekuzay= float(faktoriyel(60)/(faktoriyel(50)*faktoriyel(10))) #Örnek Uzay, 60 kişiden herhangi 10 kişi ile karşılaşma durumu.\n",
+        "ornekuzay= float(faktoriyel(60)/(faktoriyel(50)*faktoriyel(10))) #Örnek Uzay, 60000 kişiden herhangi 100 kişi ile karşılaşma durumu.\n",
         "print(\"ornekuzay = \" + str(ornekuzay)) \n",
         "Sonuc= 1-float(olayuzay/ornekuzay) #İstenmeyen durum Örnek Uzaya bölünür ve 1'den çıkarılarak ile olasılık sonucu hesaplanır.\n",
         "\n",
         "print(\"\\nOlasılık Sonucu: P(A)/P(B)= \",str(Sonuc))"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -121,8 +118,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "usYLEZHxWV3y",
-        "colab_type": "text"
+        "id": "usYLEZHxWV3y"
       },
       "source": [
         "**Permütasyon ve Faktoriyel Hesabı**\n",
@@ -142,7 +138,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "8MpzrUxOWboG",
-        "colab_type": "code",
         "outputId": "508bb314-17e3-47bf-87a7-e475316945b9",
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -188,7 +183,7 @@
         "    \n",
         "print (permutation(5,2))"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
